CHANGES.txt - 2008-09-26
------------------------

CHANGES IN CUPS V1.4b1

	- Documentation updates (STR #2567)
	- The CUPS-Add-Modify-Printer operation now allows you to set
	  the printer-state-reasons attribute.
	- The "set printer options" page now supports auto-configuration
	  of printer options (STR #1440)
	- The web interface now provides an advanced server settings
	  form.
	- The web interface's "modify printer" pages now make it
	  easier to change just one setting (STR #1919)
	- The scheduler now supports a plist PrintcapFormat.
	- The scheduler now supports multiple addresses in Allow and
	  Deny lines, just like Apache (STR #2947)
	- Added CUPS_JOBTYPE environment variable for job filters so
	  they know whether they are printing a banner or document
	  file (STR #2799)
	- Added support for printer filtering by the cupsfilter
	  command (STR #2562)
	- Added a SSLOptions directive to allow Windows clients to
	  talk to CUPS in FIPS mode (STR #2827)
	- Renamed the accept and reject commands to cupsaccept and
	  cupsreject; the old names are still available (STR #2936)
	- The locale/translate utility needed an update to work with
	  Google (STR #2882)
	- The lpstat command now supports a -H option to display the
	  default server (STR #2833)
	- The scheduler now supports a FatalErrors directive to control
	  which errors should cause the scheduler to exit (STR #2536)
	- The scheduler now uses the php-cgi program if it is available
	  (STR #2923)
	- The scheduler now supports a DefaultPaperSize directive
	  (STR #2848)
	- The scheduler now passes the job-originating-host-name
	  value to filters in the options argument (STR #2558)
	- CUPS now supports job tickets in PDF files (STR #2903)
	- Added a DBUS notifier (STR #2529)
	- The LPD mini-daemon now passes the document name when queuing
	  print jobs (STR #2482)
	- The IPP backend did not relay com.apple.print.recoverable-message
	  values.
	- The scheduler now supports a job-media-progress attribute to